kubernetes-cluster/cDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c-interpreter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: c-interpreter-pods
  template:
    metadata:
      labels:
        app: c-interpreter-pods
    spec:
      containers:
        - name: c-interpreter-container
          image: gcc-compiler:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
