kubernetes-cluster/testService.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-service
spec:
  selector:
    app: testing-pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
