kubernetes-cluster/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-interpreter-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /compile/python
            pathType: Prefix
            backend:
              service:
                name: python-interpreter-service
                port:
                  number: 80
          - path: /compile/c
            pathType: Prefix
            backend:
              service:
                name: c-interpreter-service
                port:
                  number: 80
          - path: /test/code
            pathType: Prefix
            backend:
              service:
                name: testing-service
                port:
                  number: 80
